--- a/cf_dataset.ipynb
+++ b/cf_dataset.ipynb
@@ -6,7 +6,7 @@
     "id": "EUezizjhLeeZ"
    },
    "source": [
-    "# PRACTICE: COLLABORATIVE FILTERING RS\n",
+    "# COLLABORATIVE FILTERING RS\n",
     "\n",
     "Edison Alexander Mosquera -\n",
     "Luis Fernando Valencia"
